# venux-code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CRON.md  DEEP-AGENT.md  MEMORY.md  PROVIDERS.md  SKILLS.md  TOOLS.md
src/venux_code/: __init__.py  app.py
src/venux_code/cli/: __init__.py  app.py  main.py
src/venux_code/config/: settings.py
src/venux_code/cron/: __init__.py  models.py  runner.py  scheduler.py  service.py
src/venux_code/db/: __init__.py  engine.py  models.py
src/venux_code/llm/: __init__.py
src/venux_code/llm/agent/: __init__.py  agent.py  deep_agent.py  state.py
src/venux_code/llm/prompts/: __init__.py  base.py  coder.py  summarizer.py  task.py  title.py
src/venux_code/llm/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  (+6 more)
src/venux_code/lsp/: __init__.py  client.py  config.py  models.py
src/venux_code/memory/: __init__.py  builtin_provider.py  holographic_provider.py  models.py  service.py
src/venux_code/message/: models.py  service.py
src/venux_code/permission/: __init__.py  service.py
src/venux_code/pubsub/: __init__.py  broker.py
src/venux_code/session/: service.py
src/venux_code/skills/: __init__.py  loader.py  models.py  service.py
src/venux_code/tui/: __init__.py  app.py  themes.py
tests/: conftest.py  conftest_tui.py  test_agent.py  test_app.py  test_cli.py  test_config.py  test_cron.py  test_db.py  test_deep_agent.py  test_delegation.py  test_lsp.py  test_mcp.py  test_memory.py  test_message.py  test_permission.py  test_prompts.py  test_providers.py  test_pubsub.py  test_session.py  test_skills.py  test_tools.py  test_tui.py
(+22 files in other folders)
