[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venux-code"
version = "0.1.0"
description = "Next-gen terminal AI coding agent with memory, skills, and multi-platform support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Venux" }]

dependencies = [
    # Agent Framework
    "deepagents>=0.6.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Config
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Tools
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "gitpython>=3.1.0",
    "pathspec>=0.12.0",
    # LSP
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
    # MCP
    "mcp>=1.0.0",
    # Async
    "anyio>=4.0.0",
    "asyncio-atexit>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
venux-code = "venux_code.cli.main:app"
vc = "venux_code.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/venux_code"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
